--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.2.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
+    "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
+    "mongoose": "^7.0.2",
+    "next": "12.2.2",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4"
+    "@types/node": "18.0.3",
+    "@types/react": "18.0.15",
+    "@types/uuid": "^9.0.1",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.2",
+    "typescript": "4.7.4"
   }
 }
