--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/material": "^5.8.7",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
-    "mongoose": "^7.0.2",
+    "mongoose": "6.2.0",
     "next": "12.2.2",
     "notistack": "^3.0.1",
     "react": "18.2.0",
